# brain_on_music

./: .gitignore  CLAUDE.md  README.md  extract_features.py  genres_features.ipynb  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
dashboard/: Explore_Audio.py
dashboard/pages/: 1_Sound_Basics.py  2_Fourier_Transform.py  3_Spectrograms.py  4_Audio_Features.py  5_Genre_Comparison.py
dashboard/utils/: audio.py  plots.py
tests/: conftest.py  test_home.py  test_pages.py
