[project]
name = "music-classification"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=2.0.0,<2.1",
    "numba>=0.60.0,<0.61",
    "librosa>=0.11.0,<0.12",
    "matplotlib>=3.10.0,<3.11",
    "pandas>=2.2,<3.0",
    "scikit-learn>=1.5,<1.7",
    "seaborn>=0.13,<0.14",
    "kagglehub>=0.3",
    "ipykernel>=6.29",
    "ipywidgets>=8.1",
    "jupyter>=1.0",
    "jupyterlab>=4.0",
    "streamlit>=1.55.0",
    "plotly>=6.6.0",
    "playwright>=1.58.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-playwright>=0.7.2",
]
